# esp32_j2534_V6_github_rev01

./: CHANGES_V6.md  INSTALAR_COMO_ADMIN.bat  README.md  config.ini  register_j2534.reg
.github/workflows/: build.yml
dll/: CMakeLists.txt  esp32_j2534.def
dll/include/: j2534.h
dll/src/: j2534.cpp  serial_comm.cpp  serial_comm.h
firmware/: ESP32_J2534_V6.ino  protocol.h
